--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -1,4 +1,4 @@
-header.main-header.main-header-index
+header.main-header
     nav.main-navigation
         a.nav-link.main-header-logo(href='index.html')
             | Fomin Kirill
