--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -16,11 +16,25 @@ block content
             h2.visually-hidden &Mcy;&iecy;&ncy;&yucy; &dcy;&lcy;&yacy; &vcy;&ycy;&bcy;&ocy;&rcy;&acy; &kcy;&ucy;&rcy;&scy;&acy;
             ul.navigation-list
                 li.navigation-container
-                    a.nav-btn-link(href='first_year.html') 1 &kcy;&ucy;&rcy;&scy;
+                    a.nav-btn-link.tematic-btn-link(href='first_year.html')
+                        img(src='img/logo-rgpu.png')
+                        div.break
+                        | 1 &kcy;&ucy;&rcy;&scy;
+
                 li.navigation-container
-                    a.nav-btn-link(href='second_year.html')
+                    a.nav-btn-link.tematic-btn-link(href='second_year.html')
+                        img(src='img/logo-rgpu.png')
+                        div.break
                         | 2 &kcy;&ucy;&rcy;&scy;
+
                 li.navigation-container
-                    a.nav-btn-link(href='third_year.html') 3 &kcy;&ucy;&rcy;&scy;
+                    a.nav-btn-link.tematic-btn-link(href='third_year.html')
+                        img(src='img/logo-rgpu.png')
+                        div.break
+                        | 3 курс
+
                 li.navigation-container
-                    a.nav-btn-link(href='#') 4 &kcy;&ucy;&rcy;&scy;
+                    a.nav-btn-link.tematic-btn-link(href='#')
+                        img(src='img/logo-rgpu.png')
+                        div.break
+                        | 4 &kcy;&ucy;&rcy;&scy;
