--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -3,12 +3,12 @@ html(lang="ru")
     block head
         head
             meta(charset='UTF-8')
-            meta(name='viewport' content='width=device‐width, initial‐scale=1.0, maximum‐\
-          scale=1.0, user‐scalable=no')
+            meta(content="width=device-width, initial-scale=1" name="viewport")
+            meta(content="ie=edge" http-equiv="x-ua-compatible")
+            link(rel="stylesheet" href="css/style.min.css")
             title Портфолио Кирилл Фомин
             link(rel='reconnect' href='https://fonts.gstatic.com')
             link(href='https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap' rel='stylesheet')
-            link(rel='stylesheet' href='css/global.min.css')
     body
         block header
             include header
